1.Ribbon 来快速实现负载均衡，restTemplate有负载均衡功能，直接给服务名调用就行 2.RestTemplate发送一个GET请求 3.RestTemplate发送post请求